--- a/src/assets/sass/_forms.scss
+++ b/src/assets/sass/_forms.scss
@@ -90,6 +90,10 @@ form {
         label {
             width: inherit;
         }
+
+        .inputField {
+            flex-grow: 0;
+        }
     }
 
     .left,
