--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'status-colors';
 
 .controls {
     display: flex;
@@ -54,7 +55,7 @@
                 img {
                     margin-right: 5px;
                 }
-                
+
                 span {
                     line-height: 25px;
                 }
@@ -78,6 +79,28 @@
 .project {
     padding: 15px;
     border-bottom: 1px solid $infiltro-border-grey;
+
+    display: grid;
+    grid-template-columns: 100px 1fr 100px;
+
+    .title {
+        grid-column-start: 2;
+        cursor: pointer;
+    }
+
+    .status { grid-row-start: span 3}
+
+    .excecutor {}
+
+    .address {}
+
+    .dateHourPlanned {
+        grid-row-start: 3;
+    }
+
+    .comments {
+        grid-row-start: 3;
+    }
 }
 
 .title {
