--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -10,6 +10,7 @@
             </div>
         </div>
     </div>
+
     <div class="btn filter projectType">
         <span class="title">Type</span>
         <div class="dropdown">
@@ -17,6 +18,21 @@
                 <img src="/assets/images/icon-unchecked.svg" alt="" *ngIf="!activeFilter.projectType.includes(projectType.type)">
                 <img src="/assets/images/icon-checked.svg" alt="" *ngIf="activeFilter.projectType.includes(projectType.type)">
                 <span>{{projectType.name}}</span>
+            </div>
+        </div>
+    </div>
+
+    <div class="btn filter sort" [ngClass]="sortOptions.order">
+        <span class="title">Sorteer</span>
+        <!-- <img src="/assets/images/icon-unchecked.svg" alt=""> -->
+        <div class="dropdown">
+            <div class="item" *ngFor="let sortable of projectService.sortables"
+                (click)="sortProjects(sortable.type)">
+                <img src="/assets/images/icon-unchecked.svg" alt=""
+                    *ngIf="sortOptions.field !== sortable.type">
+                <img src="/assets/images/icon-checked.svg" alt=""
+                    *ngIf="sortOptions.field === sortable.type">
+                <span>{{sortable.name}}</span>
             </div>
         </div>
     </div>
