--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -63,4 +63,5 @@ main {
     // padding: 0 15px;
     border-left: 1px solid $infiltro-border-grey;
     border-right: 1px solid $infiltro-border-grey;
+    min-height: calc(100vh - 130px)
 }
