--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,19 +1,18 @@
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
   <div class="inputGroup">
-    <label for="email">email</label>
+    <label for="email">E-mail</label>
     <input type="email" name="email" formControlName="email">
     <p *ngIf="formService.checkInputField(loginForm, 'email', submitted)" class="error">!</p>
   </div>
   
   
   <div class="inputGroup">
-    <label for="password">password</label>
+    <label for="password">Wachtwoord</label>
     <input type="password" name="password" formControlName="password">
     <p *ngIf="formService.checkInputField(loginForm, 'password', submitted)" class="error">!</p>
   </div>
 
-  <div class="inputGroup">
-    <div></div>
-    <input type="submit" value="login">
+  <div class="inputGroup right">
+      <input type="submit" value="Inloggen">
   </div>
 </form>
