having a conform box when going back to overview

--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -14,7 +14,7 @@
   <div class="projectSection">
       <div class="projectRow space-between">
         <div class="left controls">
-          <a routerLink="/projects"><img src="/assets/images/icon-back.svg" alt=""></a>
+          <div (click)="goToOverview()"><img src="/assets/images/icon-back.svg" alt=""></div>
           <div (click)="onSubmit()"><img src="/assets/images/icon-save.svg" alt=""></div>
           <div *ngIf="projectId" (click)="removeProject()"><img src="/assets/images/icon-delete.svg" alt=""></div>
           <div *ngIf="projectForm.value.invoiced && auth.isAdmin()" (click)="changeInvoicedStatus()"><img src="/assets/images/icon-invoice.svg" alt=""></div>
