--- a/src/assets/sass/_forms.scss
+++ b/src/assets/sass/_forms.scss
@@ -14,7 +14,9 @@ option,
     color: $infiltro-grey;
     line-height: $input-lineheight;
     border: none;
-    border-bottom: 1px solid $infiltro-grey;
+    border: 1px solid lighten($infiltro-grey, 30%);
+
+    // border-bottom: 1px solid $infiltro-grey;
     background: inherit;
     text-align: left;
     padding: $input-padding;
@@ -31,7 +33,7 @@ input[type='submit'] {
 }
 
 textarea {
-    border: 1px solid $infiltro-grey;
+    // border: 1px solid $infiltro-grey;
     text-align: left;
 }
 
@@ -53,8 +55,7 @@ form {
     // }
 
     .controls {
-
-        >* {
+        > * {
             width: 25px;
             margin-right: 10px;
             cursor: pointer;
@@ -85,7 +86,7 @@ form {
         justify-content: space-between;
 
         label {
-            width: inherit
+            width: inherit;
         }
     }
 
@@ -111,11 +112,9 @@ form {
         font-weight: 700;
         width: 40%;
         text-align: right;
-
         font-size: $input-fontsize;
         line-height: $input-lineheight;
         padding: $input-padding;
-
         padding-right: 30px;
     }
 
