--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,4 +15,6 @@
   <div class="inputGroup right">
       <input type="submit" value="Inloggen">
   </div>
+
+  <a routerLink="/reset-password" routerLinkActive="active">Wachtwoord vergeten?</a>
 </form>
