translate to NL

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -16,5 +16,5 @@
       <input type="submit" value="Inloggen">
   </div>
 
-  <a routerLink="/reset-password" routerLinkActive="active">Wachtwoord vergeten?</a>
+  <a routerLink="/herstel-wachtwoord" routerLinkActive="active">Wachtwoord vergeten?</a>
 </form>
