--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -1,11 +1,16 @@
-<form [formGroup]="resetForm" (ngSubmit)="onSubmit()">
-  <div class="inputGroup">
-    <label for="email">E-mail</label>
-    <input type="email" name="email" formControlName="email">
-    <p *ngIf="formService.checkInputField(resetForm, 'email', submitted)" class="error">!</p>
-  </div>
-
-  <div class="inputGroup right">
-    <input type="submit" value="Herstel wachtwoord">
-  </div>
-</form>
+<ng-container *ngIf="!resetDone; else elseTemplate">
+  <form [formGroup]="resetForm" (ngSubmit)="onSubmit()">
+    <div class="inputGroup">
+      <label for="email">E-mail</label>
+      <input type="email" name="email" formControlName="email">
+      <p *ngIf="formService.checkInputField(resetForm, 'email', submitted)" class="error">!</p>
+    </div>
+  
+    <div class="inputGroup right">
+      <input type="submit" value="Herstel wachtwoord">
+    </div>
+  </form>
+</ng-container>
+<ng-template #elseTemplate>
+  <div>Herstel aangevraagd, check je mailbox voor verder instructies.</div>
+</ng-template>
