no projects found in dutch

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -54,7 +54,7 @@
     <ng-template #noProjectsFound>
         <div class="empty">
             <img src="/assets/images/icon-broken-house.svg" alt="broken house">            
-            <span>No projects founds</span>
+            <span>Geen projecten gevonden :(</span>
         </div>
     </ng-template>
 </div>
