brighter green for conformityAvailable

--- a/src/assets/sass/_status-colors.scss
+++ b/src/assets/sass/_status-colors.scss
@@ -6,7 +6,7 @@ $planned: #2749ff;
 $onHold: #6c6c6c;
 $executed: #0f7001;
 $reportAvailable: #627c34;
-$conformityAvailable: #0f7001;
+$conformityAvailable: #25d00d;
 $completed: #8ab047;
 
 @mixin status-color($color) {
