--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -43,12 +43,13 @@
 <div class="projectList">
     <ng-container *ngIf="projects.length > 0; else noProjectsFound">
         <div class="project" *ngFor="let project of projects" [ngClass]="project.status">
+            <div class="company">{{companyService.companyName(project.company)}} </div>
             <div class="title" [routerLink]="[ '/project', project._id ]">{{ project.projectName }} / {{ projectService.projectTypeName(project.projectType) }} / {{project.houseAmount}}</div>
             <div class="status">{{projectService.statusName(project.status)}}</div>
-            <div class="excecutor">{{ projectService.executorName(project.executor) }}</div>
             <div class="address">{{project.street}}, {{project.postalCode}} {{project.city}}, <span class="extraInfoAddress">{{project.extraInfoAddress}}</span></div>
-            <div class="dateHourPlanned">{{ projectService.formatDate(project.datePlanned) }} {{ project.hourPlanned }}</div>
-            <div class="comments">{{project.comments}}</div>
+            <div class="dateHourCreated">{{ projectService.formatDate(project.dateCreated) }}</div>
+            <div class="dateHourPlanned">{{ projectService.executorName(project.executor) }} op<br>{{ projectService.formatDate(project.datePlanned) }}<br>om {{ project.hourPlanned }}</div>
+            <div class="projectComplete">v</div>
         </div>
     </ng-container>
     <ng-template #noProjectsFound>
