--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -1,5 +1,5 @@
-@import 'variables';
-@import 'status-colors';
+@import "variables";
+@import "status-colors";
 
 .controls {
     display: flex;
@@ -28,8 +28,6 @@
             width: 25px;
             height: auto;
         }
-
-
     }
 
     .filter {
@@ -77,29 +75,54 @@
 }
 
 .project {
-    padding: 15px;
+    padding: 0 15px;
+    margin: 10px 0;
     border-bottom: 1px solid $infiltro-border-grey;
-
     display: grid;
-    grid-template-columns: 100px 1fr 100px;
+    grid-template-columns: 100px 1fr 100px 150px 10px;
+    
+    &:first-child {
+        margin-top: 0;
+    }
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+
+    .company {
+        grid-column-start: 1;
+        grid-row-start: 1;
+    }
+
+    .dateHourCreated {
+        grid-column-start: 1;
+        grid-row-start: 2;
+    }
 
     .title {
         grid-column-start: 2;
+        grid-row-start: 1;
         cursor: pointer;
     }
 
-    .status { grid-row-start: span 3}
-
-    .excecutor {}
-
-    .address {}
-
-    .dateHourPlanned {
-        grid-row-start: 3;
+    .status {
+        grid-column-start: 3;
+        grid-row-start: span 2;
     }
 
-    .comments {
-        grid-row-start: 3;
+    .address {
+        grid-column-start: 2;
+        grid-row-start: 2;
+    }
+
+    .dateHourPlanned {
+        grid-column-start: 4;
+        grid-row-start: span 2;
+    }
+
+    .projectComplete {
+        grid-column-start: 5;
+        grid-row-start: 1;
     }
 }
 
@@ -113,7 +136,7 @@
     justify-content: center;
     height: calc(100vh - 200px);
 
-    >* {
+    > * {
         margin-right: 20px;
     }
 }
