--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -83,7 +83,7 @@
     margin: 10px 0;
     border-bottom: 1px solid $infiltro-border-grey;
     display: grid;
-    grid-template-columns: 100px 1fr 100px 150px 10px;
+    grid-template-columns: 100px 1fr 100px 150px 15px;
     
     &:first-child {
         margin-top: 0;
@@ -124,9 +124,17 @@
         grid-row-start: span 2;
     }
 
-    .projectComplete {
+    .technicalDataFilledIn {
         grid-column-start: 5;
-        grid-row-start: 1;
+        grid-row-start: span 2;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        img {
+            width: 15px;
+        }
     }
 }
 
