--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -93,6 +93,10 @@
         box-shadow: 0px 10px 14px -4px rgba(0, 0, 0, 0.43);
     }
 
+    .batchMode & {
+        cursor: pointer;
+    }
+
     .company {
         grid-column-start: 1;
         grid-row-start: 1;
